provision_templates/kubernetes/ingress-nginx/ingress_backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.eschool.chaincorp.info
    http:
      paths:
      - path: /
        backend:
          serviceName: eschool-backend-service
          servicePort: port-backend
