provision_templates/kubernetes/ingress-nginx/ingress_frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/api http://api.eschool.chaincorp.info$1 permanent;
spec:
  rules:
  - host: eschool.chaincorp.info
    http:
      paths:
      - path: /
        backend:
          serviceName: eschool-frontend-service
          servicePort: port-frontend
